--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="/assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 
@@ -28,7 +28,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="/images/pic01.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -78,10 +78,10 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+											<a href="/images/gallery/fulls/01.jpg" class="landscape"><img src="/images/gallery/thumbs/01.jpg" alt="" /></a>
+											<a href="/images/gallery/fulls/02.jpg"><img src="/images/gallery/thumbs/02.jpg" alt="" /></a>
+											<a href="/images/gallery/fulls/03.jpg"><img src="/images/gallery/thumbs/03.jpg" alt="" /></a>
+											<a href="/images/gallery/fulls/04.jpg" class="landscape"><img src="/images/gallery/thumbs/04.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
