--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="./images/pic01.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="./images/pic01.jpg" alt="" style="width: 100%;"/></span>
 						</div>
 					</section>
 
@@ -33,7 +33,7 @@
 						</header>
 						<div class="content">
 							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-							<span class="./image main"><img src="./images/pic02.jpg" alt="" /></span>
+							<span class="./image main"><img src="./images/pic02.jpg" alt="" style="width: 100%;"/></span>
 						</div>
 					</section>
 
@@ -105,7 +105,7 @@
 										<div class="gallery">
 											<a href="./images/gallery/fulls/08.jpg" class="portrait"><img src="./images/gallery/thumbs/08.jpg" alt="" /></a>
 											<a href="./images/gallery/fulls/09.jpg" class="portrait"><img src="./images/gallery/thumbs/09.jpg" alt="" /></a>
-											<a href="./images/gallery/fulls/10.jpg" class="landscape"><img src="/images/gallery/thumbs/10.jpg" alt="" /></a>
+											<a href="./images/gallery/fulls/10.jpg" class="landscape"><img src="./images/gallery/thumbs/10.jpg" alt="" /></a>
 										</div>
 									</div>
 								</section>
