--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2>Magna sed nullam nisl adipiscing</h2>
+							<h2>Informatik Support</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p><strong>Ich bin mit 18 in die Informatik </strong>gestossen und habe seit dann neben meiner Lehre ein privates Webunternehmen geführt welches mir erlaubt hat 30 KMUs zu helfen.</p>
 							<span class="./image main"><img src="./images/pic02.jpg" alt="" style="width: 100%;"/></span>
 						</div>
 					</section>
