--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<h2>Informatik Support</h2>
 						</header>
 						<div class="content">
-							<p><strong>Ich bin mit 18 in die Informatik </strong>gestossen und habe seit dann neben meiner Lehre ein privates Webunternehmen geführt welches mir erlaubt hat 30 KMUs zu helfen.</p>
+							<p><strong>Ich bin mit 18 in die Informatik </strong>gestossen und habe seit dann neben meiner Lehre ein privates Webunternehmen geführt welches mir erlaubt hat über 30 regionale KMUs zu helfen.</p>
 							<span class="./image main"><img src="./images/pic02.jpg" alt="" style="width: 100%;"/></span>
 						</div>
 					</section>
@@ -40,17 +40,27 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Feugiat consequat tempus ultrices</h2>
+							<h2>Meine Fähigkeiten</h2>
 						</header>
 						<div class="content">
-							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
+							<p><strong>konnte in meiner ganzen Arbeitszeit</strong> Sehr viele Erfahrungen sammlen, abgesehen von dem grundlegenden Telefon Techsupport zu Server Wartung, Betreibung von zwei über 200 Angestellten grossen Callcenters, bis hin zur Desktop Installation in einer Privat Bank.</p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Consequat tempus</li>
-								<li class="icon solid fa-bolt">Etiam adipiscing</li>
-								<li class="icon solid fa-signal">Libero nullam</li>
-								<li class="icon solid fa-cog">Blandit condimentum</li>
-								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-								<li class="icon solid fa-code">Nibh amet venenatis</li>
+								<li class="icon solid fa-laptop">Deployment
+									<small>Windows, Unix und Mac OS Installationen, Reperaturen sowie Backups</small>
+								</li>
+								<li class="icon solid fa-bolt">Datacenterbetrieb
+									<small>Serververwaltung, Betriebsbereitstellung, Monitoring, Reporting sowie auch Netzwerkbetrieb von grösseren schweizer KMU's</small>
+								</li>
+								<li class="icon solid fa-signal">Webseiten & gängige Suchmaschinen
+									<small>Einfache Vermarketing Strategien sowie auch, Erschaffung und Unterhalt, Html5, Javascript & PHP. Alles aus eigener Hand.</small>
+								</li>
+								<li class="icon solid fa-repair">Elektro Reperaturen
+									<small>Als Techniker bin ich natürlich auch stark technisch visiert, durch mein grosses Intresse erwirtschafte ich im Privatbereich durchaus mehrere Endgeräte von Gamer Laptop bis zum Macbook Pro, ich vermittle oder verkaufe Ihnen gerne ein persönliches Gerät auf ihre Bedürfnisse angepasst.</small>
+								</li>
+								<li class="icon solid fa-phone">Callcenter Techniker
+									<small>Aus meiner Lehre konnte ich viel Erfahrungen sammlen, mit dem Supporten über Telefon und durfte 4 Jahre intensiv meine Fähigkeiten trainieren.</small>
+								</li>
+								<li class="icon solid fa-map-marker">Nibh amet venenatis</li>
 							</ul>
 							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
 						</div>
