--- a/index.html
+++ b/index.html
@@ -45,24 +45,27 @@
 						<div class="content">
 							<p><strong>konnte in meiner ganzen Arbeitszeit</strong> Sehr viele Erfahrungen sammlen, abgesehen von dem grundlegenden Telefon Techsupport zu Server Wartung, Betreibung von zwei über 200 Angestellten grossen Callcenters, bis hin zur Desktop Installation in einer Privat Bank.</p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Deployment
+								<li class="icon solid fa-laptop"><strong>Deployment</strong>
 									<small>Windows, Unix und Mac OS Installationen, Reperaturen sowie Backups</small>
 								</li>
-								<li class="icon solid fa-bolt">Datacenterbetrieb
+								<li class="icon solid fa-bolt"><strong>Datacenterbetrieb</strong>
 									<small>Serververwaltung, Betriebsbereitstellung, Monitoring, Reporting sowie auch Netzwerkbetrieb von grösseren schweizer KMU's</small>
 								</li>
-								<li class="icon solid fa-signal">Webseiten & gängige Suchmaschinen
-									<small>Einfache Vermarketing Strategien sowie auch, Erschaffung und Unterhalt, Html5, Javascript & PHP. Alles aus eigener Hand.</small>
+								<li class="icon solid fa-signal"><strong>Webseiten & gängige Suchmaschinen</strong>
+									<small>Einfache Vermarketing Strategien für Facebook, Google, Bing sowie auch, Erschaffung und Unterhalt, Html5, Javascript & PHP. Alles aus eigener Hand.</small>
 								</li>
-								<li class="icon solid fa-repair">Elektro Reperaturen
+								<li class="icon solid fa-repair"><strong>Elektro Reperaturen</strong>
 									<small>Als Techniker bin ich natürlich auch stark technisch visiert, durch mein grosses Intresse erwirtschafte ich im Privatbereich durchaus mehrere Endgeräte von Gamer Laptop bis zum Macbook Pro, ich vermittle oder verkaufe Ihnen gerne ein persönliches Gerät auf ihre Bedürfnisse angepasst.</small>
 								</li>
-								<li class="icon solid fa-phone">Callcenter Techniker
+								<li class="icon solid fa-phone"><strong>Callcenter Techniker</strong>
 									<small>Aus meiner Lehre konnte ich viel Erfahrungen sammlen, mit dem Supporten über Telefon und durfte 4 Jahre intensiv meine Fähigkeiten trainieren.</small>
 								</li>
-								<li class="icon solid fa-map-marker">Nibh amet venenatis</li>
+								<li class="icon solid fa-map-marker"><strong>Support über Postweg</strong>
+									<small>Während der Pandemie biete ich meinen Kunden an ihr Support über Postweg zu machen, so dass sie ihr Gerät für 60 CHF kontaktlos transferien und von mir aufbereitet werden kann, ob Windows Installation, Office oder SSD Verbauung oder Grafikkarte ich biete es als Dienstleistung für Informatik Dinge an.
+									</small>
+								</li>
 							</ul>
-							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p>Ich suche einen neuen Fokus im Leben und arbeite motiviert in der IT im privatem Sektor, dennoch suche ich eine Festanstellung um endlich mehr Fokus meiner Karriere zu widmen.</p>
 						</div>
 					</section>
 
