--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
 								<li class="icon solid fa-laptop"><strong>Deployment</strong>
 									<small>Windows, Unix und Mac OS Installationen, Reperaturen sowie Backups</small>
 								</li>
-								<li class="icon solid fa-bolt"><strong>Datacenterbetrieb</strong>
+								<li class="icon solid fa-server"><strong>Datacenterbetrieb</strong>
 									<small>Serververwaltung, Betriebsbereitstellung, Monitoring, Reporting sowie auch Netzwerkbetrieb von grösseren schweizer KMU's</small>
 								</li>
-								<li class="icon solid fa-signal"><strong>Webseiten & gängige Suchmaschinen</strong>
+								<li class="icon solid fa-share-alt-square"><strong>Webseiten & gängige Suchmaschinen</strong>
 									<small>Einfache Vermarketing Strategien für Facebook, Google, Bing sowie auch, Erschaffung und Unterhalt, Html5, Javascript & PHP. Alles aus eigener Hand.</small>
 								</li>
-								<li class="icon solid fa-repair"><strong>Elektro Reperaturen</strong>
+								<li class="icon solid fa-desktop"><strong>Elektro Reperaturen</strong>
 									<small>Als Techniker bin ich natürlich auch stark technisch visiert, durch mein grosses Intresse erwirtschafte ich im Privatbereich durchaus mehrere Endgeräte von Gamer Laptop bis zum Macbook Pro, ich vermittle oder verkaufe Ihnen gerne ein persönliches Gerät auf ihre Bedürfnisse angepasst.</small>
 								</li>
 								<li class="icon solid fa-phone"><strong>Callcenter Techniker</strong>
 									<small>Aus meiner Lehre konnte ich viel Erfahrungen sammlen, mit dem Supporten über Telefon und durfte 4 Jahre intensiv meine Fähigkeiten trainieren.</small>
 								</li>
-								<li class="icon solid fa-map-marker"><strong>Support über Postweg</strong>
+								<li class="icon solid fa-cube "><strong>Support über Postweg</strong>
 									<small>Während der Pandemie biete ich meinen Kunden an ihr Support über Postweg zu machen, so dass sie ihr Gerät für 60 CHF kontaktlos transferien und von mir aufbereitet werden kann, ob Windows Installation, Office oder SSD Verbauung oder Grafikkarte ich biete es als Dienstleistung für Informatik Dinge an.
 									</small>
 								</li>
