--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 					<section>
 						<header>
 							<h2>Meine Fähigkeiten</h2>
+							<p>Hier eine kleine Auflistung meiner Fähigkeiten, ich hoffe Ihnen hiermit eine kleine Einsicht zu geben, Falls gewünscht wird reiche ich Ihnen gerne meine Unterlagen sowie CV ein.</p>
 						</header>
 						<div class="content">
 							<p><strong>konnte in meiner ganzen Arbeitszeit</strong> Sehr viele Erfahrungen sammlen, abgesehen von dem grundlegenden Telefon Techsupport zu Server Wartung, Betreibung von zwei über 200 Angestellten grossen Callcenters, bis hin zur Desktop Installation in einer Privat Bank.</p>
@@ -66,13 +67,15 @@
 								</li>
 							</ul>
 							<p>Ich suche einen neuen Fokus im Leben und arbeite motiviert in der IT im privatem Sektor, dennoch suche ich eine Festanstellung um endlich mehr Fokus meiner Karriere zu widmen.</p>
+							<p>Gerne helfe ich Ihnen jetzt während der Pandemie auch mit Homeoffice.</p>
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Ultrices erat magna sed condimentum</h2>
+							<h2>Persönliche maasgeschneiderte Lösungen</h2>
+							<p>Durch die schnellwachsende Welt, gibt es viele spannende neue Entwicklungen, so bieten wir unseren Kunden Support mit Email Bewerbung und Marketing auf Instagram an.</p>
 						</header>
 						<div class="content">
 							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
@@ -81,7 +84,7 @@
 								<section>
 									<header>
 										<h3>Erat aliquam</h3>
-										<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt  ipsum suspendisse ultrices gravida.</p>
+
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -89,6 +92,23 @@
 											<a href="./images/gallery/fulls/02.jpg"><img src="./images/gallery/thumbs/02.jpg" alt="" /></a>
 											<a href="./images/gallery/fulls/03.jpg"><img src="./images/gallery/thumbs/03.jpg" alt="" /></a>
 											<a href="./images/gallery/fulls/04.jpg" class="landscape"><img src="./images/gallery/thumbs/04.jpg" alt="" /></a>
+										<p>Wir bieten verschiedene Dienstleistungen an, von dem Marketing über soziale Medien, Aufbereitung von Livestream oder Produkt Placement bis hin zur Automatisierung im Bewerbungs Alltag.
+										</p>
+										<p>Durch unser Instagram Toolkit helfen wir Kunden ihre Sichbarkeit in der immer grösser werdenden Instagram Welt zu plazieren. 
+										</p>
+										<p>
+										Durch unseren Transparenten Design Approach ermöglichen wir dem Kunden spezifische Lösungen und Kampagnien für ihn durch zu führen von der Regie mit Smartphone, bis zu Studio Dreh oder Proffessionelem Produkt Fotografie bieten wir alles zu gängen Preisen an.
+										</p>
+										<p>
+											Für Kunden auf Arbeitssuche bieten wir an, den Versand sowie auch das suchen für Jobs zu übernehmen, heisst sie schreiben eine Email und fügen einmal den Lebenslauf zu und wir suchen für sie 1000 Emails pro Monat und versenden diese auch für sie.
+										</p>
+										<p>
+											Sie müssen uns auch keine 1000 Bewerbungen zukommen lassen sondern durch unseren Technischen Fortschritt, suchen wir die Bewerbungen und versenden für sie ihr CV.
+
+										</p>
+										<p>
+											Anstatt dem Kunden viel Zeit zu überlassen mit Suche nach Bewerbungen, ermöglichen unsere Techniker sich mit den relevanten Resultaten auseinanderzusetzen.
+										</p>
 										</div>
 									</div>
 								</section>
