--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
 										</div>
 									</div>
 								</section>
+							</div>
+						</section>
 
 							<!-- Section -->
 								<section>
