Push for small Change

--- a/showroom/roi-bau.ch/index.html
+++ b/showroom/roi-bau.ch/index.html
@@ -86,7 +86,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="kanalisation.html"></a></h2>
+										<h2><a href="kanalisation.html">Kanalisation</a></h2>
 									</header>
 									<a href="kanalisation.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>Auch bei Sanitärs-Lösungen haben unsere Experten alles bereit um Ihnen zu helfen, vom Legen der Rohre bis zur Kanalisation, alles wird von unseren Experten übernommen.</p>
