Roi Bau - Story  Wheel erneuern

--- a/showroom/roi-bau.ch/index.html
+++ b/showroom/roi-bau.ch/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Willkommen bei<br /> <img src="./images/logo.png"> </img></h1>
+						<h1>Willkommen bei<br /> <img class="image fit" src="./images/logo.png"> </img></h1>
 						<p>Ihr Partner rund um den Bau, füllen sie sich willkommen und lassen sie sich professionel beraten, wir stehen rund um die Uhr zu Ihrer Verfügung.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -99,9 +99,9 @@
 										<h2><a href="./baumeister.html">Baumeister</a></h2>
 									</header>
 									<a href="./baumeister.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Zusammen mit unserem Partner können sie einen Bauplan erstellen und wir übernehmen die komplette Umsetzung, sehen sie unter unseren Referenzen, wie der Komplett umbau übernommen und ausgeführt wird.</p>
 									<ul class="actions special">
-										<li><a href="./baumeister.html" class="button">Full Story</a></li>
+										<li><a href="./baumeister.html" class="button">Baumeister</a></li>
 									</ul>
 								</article>
 								<article>
@@ -109,19 +109,19 @@
 										<h2><a href="./trockenbau.html">Trockenbau</a></h2>
 									</header>
 									<a href="./trockenbau.html" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Auch im Innenbereich sind unsere Experten stets auf vollste Kundenzufriedenheit aus, wir bauen um renovieren oder bauen neu, egal ob Büro, Haushalt oder Lager wir sind stets die Kundenwünsche am umsetzen.</p>
 									<ul class="actions special">
-										<li><a href="./trockenbau.html" class="button">Full Story</a></li>
+										<li><a href="./trockenbau.html" class="button">Trockenbau und Montage</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="./fliessen_plattenlegen.html">Fliessen &Aacute; Plattenlegen</a></h2>
+										<h2><a href="./fliessen_plattenlegen.html">Fliessen und Plattenlegen</a></h2>
 									</header>
 									<a href="./fliessen_plattenlegen.html" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Falls ihre Wohnung oder ihr Büro ein neuen Holzboden oder Steinboden braucht sind wir dazu da Ihnen einen neuen Boden oder Fliessen zu legen, wir helfen und setzen um.</p>
 									<ul class="actions special">
-										<li><a href="./fliessen_plattenlegen.html" class="button">Full Story</a></li>
+										<li><a href="./fliessen_plattenlegen.html" class="button">Fliessen und Plattenlegen</a></li>
 									</ul>
 								</article>
 							</section>
