--- a/showroom/roi-bau.ch/kontakt.html
+++ b/showroom/roi-bau.ch/kontakt.html
@@ -35,8 +35,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Willkommen</a></li>
-							<li><a href="referenzen.html">Referenzen</a></li>
-							<li><a href="kontakt.html">Kontakt</a></li>
+							<li><a href="generic.html">Referenzen</a></li>
+							<li><a href="generic.html">Kontakt</a></li>
 							<li><a href="elements.html">#</a></li>
 						</ul>
 						<ul class="icons">
