--- a/showroom/roi-bau.ch/trockenbau.html
+++ b/showroom/roi-bau.ch/trockenbau.html
@@ -34,10 +34,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Willkommen</a></li>
+							<li><a href="index.html">Willkommen</a></li>
 							<li><a href="generic.html">Referenzen</a></li>
 							<li><a href="generic.html">Kontakt</a></li>
-							<li><a href="elements.html">#</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
