html file referenzen

--- a/showroom/roi-bau.ch/referenzen.html
+++ b/showroom/roi-bau.ch/referenzen.html
@@ -35,8 +35,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Willkommen</a></li>
-							<li class="active"><a href="generic.html">Referenzen</a></li>
-							<li><a href="generic.html">Kontakt</a></li>
+							<li class="active"><a href="referenzen.html">Referenzen</a></li>
+							<li><a href="kontakt.html">Kontakt</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
