--- a/showroom/roi-bau.ch/index.html
+++ b/showroom/roi-bau.ch/index.html
@@ -35,7 +35,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">ROI BAU</a>
+						<a href="index.html" class="logo">ROI BAU GmbH</a>
 					</header>
 
 				<!-- Nav -->
