--- a/showroom/roi-bau.ch/referenzen_1.html
+++ b/showroom/roi-bau.ch/referenzen_1.html
@@ -24,13 +24,13 @@
 		<!-- Wrapper -->
 		<div id="wrapper" class="fade-in">
 				<!-- Intro -->
-				<div id="intro">
-					<h1>Willkommen bei<br /> <img class="image small" src="./images/logo.png"> </img></h1>
-					<p>Ihr Partner rund um den Bau, füllen sie sich willkommen und lassen sie sich professionel beraten, wir stehen rund um die Uhr zu Ihrer Verfügung.</p>
-					<ul class="actions">
-						<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-					</ul>
-				</div>
+			<div id="intro">
+				<h1>Willkommen bei<br /> <img class="image fit" src="./images/logo.png"> </img></h1>
+				<p>Ihr Partner rund um den Bau, füllen sie sich willkommen und lassen sie sich professionel beraten, wir stehen rund um die Uhr zu Ihrer Verfügung.</p>
+				<ul class="actions">
+					<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+				</ul>
+			</div>
 
 			<!-- Header -->
 			<header id="header">
