--- a/showroom/roi-bau.ch/index.html
+++ b/showroom/roi-bau.ch/index.html
@@ -5,45 +5,39 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-<head>
-	<title>Willkommen bei Roi Bau</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link rel="stylesheet" href="assets/css/main.css" />
-	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	<link rel="apple-touch-icon" sizes="180x180" href="./images/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="./images/favicon-16x16.png">
-	<link rel="manifest" href="./images/site.webmanifest">
-	<link rel="mask-icon" href="./images/safari-pinned-tab.svg" color="#5bbad5">
-	<meta name="msapplication-TileColor" content="#da532c">
-	<meta name="theme-color" content="#ffffff">
-</head>
+	<head>
+		<title>Willkommen bei Roi Bau</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
-				<div id="intro">
-					<h1>Willkommen bei<br /> <img class="image fit" src="./images/logo.png"> </img></h1>
-					<p>Ihr Partner rund um den Bau, füllen sie sich willkommen und lassen sie sich professionel beraten, wir stehen rund um die Uhr zu Ihrer Verfügung.</p>
-					<ul class="actions">
-						<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-					</ul>
-				</div>
+					<div id="intro">
+						<h1>Willkommen bei<br /> <img class="image fit" src="./images/logo.png"> </img></h1>
+						<p>Ihr Partner rund um den Bau, füllen sie sich willkommen und lassen sie sich professionel beraten, wir stehen rund um die Uhr zu Ihrer Verfügung.</p>
+						<ul class="actions">
+							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+						</ul>
+					</div>
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">ROI BAU GmbH</a>
+						<a href="index.html" class="logo">ROI BAU</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Willkommen</a></li>
-							<li><a href="referenzen.html">Referenzen</a></li>
-							<li><a href="kontakt.html">Kontakt</a></li>
+							<li><a href="generic.html">Referenzen</a></li>
+							<li><a href="generic.html">Kontakt</a></li>
+							<li><a href="elements.html">#</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -105,9 +99,9 @@
 										<h2><a href="./baumeister.html">Baumeister</a></h2>
 									</header>
 									<a href="./baumeister.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Zusammen mit unserem Partner können sie einen Bauplan erstellen und wir übernehmen die komplette Umsetzung, sehen sie unter unseren Referenzen, wie der Komplett umbau übernommen und ausgeführt wird.</p>
+									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="./baumeister.html" class="button">Baumeister</a></li>
+										<li><a href="./baumeister.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
@@ -115,9 +109,9 @@
 										<h2><a href="./trockenbau.html">Trockenbau</a></h2>
 									</header>
 									<a href="./trockenbau.html" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Auch im Innenbereich sind unsere Experten stets auf vollste Kundenzufriedenheit aus, wir bauen um renovieren oder bauen neu, egal ob Büro, Haushalt oder Lager wir sind stets die Kundenwünsche am umsetzen.</p>
+									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="./trockenbau.html" class="button">Trockenbau und Montage</a></li>
+										<li><a href="./trockenbau.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
@@ -125,9 +119,9 @@
 										<h2><a href="./fliessen_plattenlegen.html">Fliessen und Plattenlegen</a></h2>
 									</header>
 									<a href="./fliessen_plattenlegen.html" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Falls ihre Wohnung oder ihr Büro ein neuen Holzboden oder Steinboden braucht sind wir dazu da Ihnen einen neuen Boden oder Fliessen zu legen, wir helfen und setzen um.</p>
+									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
 									<ul class="actions special">
-										<li><a href="./fliessen_plattenlegen.html" class="button">Fliessen und Plattenlegen</a></li>
+										<li><a href="./fliessen_plattenlegen.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
