--- a/showroom/roi-bau.ch/referenzen_6.html
+++ b/showroom/roi-bau.ch/referenzen_6.html
@@ -196,7 +196,7 @@
 
 		<!-- Copyright -->
 		<div id="copyright">
-			<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+			<ul><li>&copy;  ROI&amp;Bau GmbH</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 		</div>
 
 	</div>
