Update Text, Refernzen

--- a/showroom/roi-bau.ch/index.html
+++ b/showroom/roi-bau.ch/index.html
@@ -35,15 +35,20 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Willkommen</a></li>
-							<li><a href="generic.html">Referenzen</a></li>
-							<li><a href="generic.html">Kontakt</a></li>
-							<li><a href="elements.html">#</a></li>
+							<li><a href="referenzen.html">Referenzen</a></li>
+							<li><a href="aushub.html">Aushub</a></li>
+							<li><a href="kanalisation.html">Kanalisation</a></li>
+							<li><a href="baumeister.html">Baumeister</a></li>
+							<li><a href="abbruch.html">Abbruch</a></li>
+							<li><a href="trockenbau.html">Trockenbau</a></li>
+							<li><a href="fliessen_plattenlegen.html">Platten</a></li>
+
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="#" class="icon brands fa-whatsapp"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -53,12 +58,12 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Und willkommen zu ihrem Professionellen Baumeister</a></h2>
+									<h2>Und willkommen zu ihrem Professionellen Baumeister</h2>
 									<p>Wir sind ihr persönlicher Berater und Umsetzer bei verschiedensten Bauaufträgen. Von Abbruch zu Trockenbau helfen wir ihnen bei allem. Kontaktieren Sie uns noch heute für eine Beratung. Falls sie Hilfe bei der Renovation oder beim Neubau brauchen, bieten wir Ihnen unsere Partner Architekturen Bürös an, helfen vor Ort mit der Renovation oder auch als Baumeister. Wir bieten Ihnen alles an vom Bauplan zum fertigem Haus.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="./referenzen.html" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="./referenzen.html" class="button large">Referenzen</a></li>
 								</ul>
 							</article>
 
@@ -71,7 +76,7 @@
 									<a href="./abbruch.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>Falls sie Beihilfe bei der Renovation brauchen, bieten wir Ihnen ein Team und Fahrzeuge zur Umsetzung an, der Komplette Abbau wird von unserem Team Ihren Wünschen nach umgesetzt.</p>
 									<ul class="actions special">
-										<li><a href="./abbruch.html" class="button">Produkt und Referenzen</a></li>
+										<li><a href="./abbruch.html" class="button">Abbruch</a></li>
 									</ul>
 								</article>
 								<article>
@@ -171,7 +176,7 @@
 									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="#" class="icon brands alt fa-whatsapp"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
