--- a/showroom/roi-bau.ch/referenzen_1.html
+++ b/showroom/roi-bau.ch/referenzen_1.html
@@ -23,7 +23,7 @@
 
 		<!-- Wrapper -->
 		<div id="wrapper" class="fade-in">
-				<!-- Intro -->
+			<!-- Intro -->
 			<div id="intro">
 				<h1>Willkommen bei<br /> <img class="image fit" src="./images/logo.png"> </img></h1>
 				<p>Ihr Partner rund um den Bau, füllen sie sich willkommen und lassen sie sich professionel beraten, wir stehen rund um die Uhr zu Ihrer Verfügung.</p>
@@ -40,9 +40,15 @@
 			<!-- Nav -->
 			<nav id="nav">
 				<ul class="links">
-					<li><a href="index.html">Willkommen</a></li>
-					<li class="active"><a href="referenzen.html">Referenzen</a></li>
-					<li><a href="kontakt.html">Kontakt</a></li>
+					<li class="active"><a href="index.html">Willkommen</a></li>
+					<li><a href="referenzen.html">Referenzen</a></li>
+					<li><a href="aushub.html">Aushub</a></li>
+					<li><a href="kanalisation.html">Kanalisation</a></li>
+					<li><a href="baumeister.html">Baumeister</a></li>
+					<li><a href="abbruch.html">Abbruch</a></li>
+					<li><a href="trockenbau.html">Trockenbau</a></li>
+					<li><a href="fliessen_plattenlegen.html">Platten</a></li>
+
 				</ul>
 				<ul class="icons">
 					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
