--- a/showroom/roi-bau.ch/abbruch.html
+++ b/showroom/roi-bau.ch/abbruch.html
@@ -41,9 +41,15 @@
 			<!-- Nav -->
 			<nav id="nav">
 				<ul class="links">
-					<li><a href="index.html">Willkommen</a></li>
-					<li><a href="generic.html">Referenzen</a></li>
-					<li><a href="generic.html">Kontakt</a></li>
+					<li class="active"><a href="index.html">Willkommen</a></li>
+					<li><a href="referenzen.html">Referenzen</a></li>
+					<li><a href="aushub.html">Aushub</a></li>
+					<li><a href="kanalisation.html">Kanalisation</a></li>
+					<li><a href="baumeister.html">Baumeister</a></li>
+					<li><a href="abbruch.html">Abbruch</a></li>
+					<li><a href="trockenbau.html">Trockenbau</a></li>
+					<li><a href="fliessen_plattenlegen.html">Platten</a></li>
+
 				</ul>
 				<ul class="icons">
 					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
