--- a/showroom/roi-bau.ch/referenzen_3.html
+++ b/showroom/roi-bau.ch/referenzen_3.html
@@ -22,173 +22,181 @@
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper" class="fade-in">
+		<div id="wrapper" class="fade-in">
 
-				<!-- Intro -->
-				<div id="intro">
-					<h1>Willkommen bei<br /> <img class="image fit" src="./images/logo.png"> </img></h1>
-					<p>Ihr Partner rund um den Bau, füllen sie sich willkommen und lassen sie sich professionel beraten, wir stehen rund um die Uhr zu Ihrer Verfügung.</p>
-					<ul class="actions">
-						<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-					</ul>
-				</div>
+			<!-- Intro -->
+			<div id="intro">
+				<h1>Willkommen bei<br /> <img class="image fit" src="./images/logo.png"> </img></h1>
+				<p>Ihr Partner rund um den Bau, füllen sie sich willkommen und lassen sie sich professionel beraten, wir stehen rund um die Uhr zu Ihrer Verfügung.</p>
+				<ul class="actions">
+					<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+				</ul>
+			</div>
 
-				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo">ROI BAU GmbH</a>
+			<!-- Header -->
+			<header id="header">
+				<a href="index.html" class="logo">ROI BAU GmbH</a>
+			</header>
+
+			<!-- Nav -->
+			<nav id="nav">
+				<ul class="links">
+					<li class="active"><a href="index.html">Willkommen</a></li>
+					<li><a href="referenzen.html">Referenzen</a></li>
+					<li><a href="aushub.html">Aushub</a></li>
+					<li><a href="kanalisation.html">Kanalisation</a></li>
+					<li><a href="baumeister.html">Baumeister</a></li>
+					<li><a href="abbruch.html">Abbruch</a></li>
+					<li><a href="trockenbau.html">Trockenbau</a></li>
+					<li><a href="fliessen_plattenlegen.html">Platten</a></li>
+
+				</ul>
+				<ul class="icons">
+					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="#" class="icon brands fa-whatsapp"><span class="label">GitHub</span></a></li>
+				</ul>
+			</nav>
+
+			<!-- Main -->
+			<div id="main">
+
+				<!-- Featured Post -->
+				<article class="post featured">
+					<header class="major">
+						<h2><a href="#">Und willkommen zu ihrem Professionellen Baumeister</a></h2>
+						<p>Wir sind ihr persönlicher Berater und Umsetzer bei verschiedensten Bauaufträgen. Von Abbruch zu Trockenbau helfen wir ihnen bei allem. Kontaktieren Sie uns noch heute für eine Beratung. Falls sie Hilfe bei der Renovation oder beim Neubau brauchen, bieten wir Ihnen unsere Partner Architekturen Bürös an, helfen vor Ort mit der Renovation oder auch als Baumeister. Wir bieten Ihnen alles an vom Bauplan zum fertigem Haus.</p>
 					</header>
+					<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+					<ul class="actions special">
+						<li><a href="#" class="button large">Full Story</a></li>
+					</ul>
+				</article>
 
-				<!-- Nav -->
-					<nav id="nav">
-						<ul class="links">
-							<li><a href="index.html">Willkommen</a></li>
-							<li class="active"><a href="referenzen.html">Referenzen</a></li>
-							<li><a href="kontakt.html">Kontakt</a></li>
+				<!-- Posts -->
+				<section class="posts">
+					<article>
+						<header>
+							<h2><a href="./abbruch.html">Abbruch</a></h2>
+						</header>
+						<a href="./abbruch.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+						<p>Falls sie Beihilfe bei der Renovation brauchen, bieten wir Ihnen ein Team und Fahrzeuge zur Umsetzung an, der Komplette Abbau wird von unserem Team Ihren Wünschen nach umgesetzt.</p>
+						<ul class="actions special">
+							<li><a href="./abbruch.html" class="button">Produkt und Referenzen</a></li>
 						</ul>
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-whatsapp"><span class="label">GitHub</span></a></li>
+					</article>
+					<article>
+						<header>
+							<h2><a href="./aushub.html">Aushub</h2>
+						</header>
+						<a href="./aushub.html" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+						<p>Hier helfen wir Ihnen bei der kompletten massgeschneiderten Lösung für Sie. Wir bieten Bagger Arbeiten an und helfen bei Fundament, Neugrabung des Gartens oder setzen einer neuen Steintreppe.</p>
+						<ul class="actions special">
+							<li><a href="./aushub.html" class="button">Aushub</a></li>
 						</ul>
-					</nav>
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Featured Post -->
-							<article class="post featured">
-								<header class="major">
-									<h2><a href="#">Und willkommen zu ihrem Professionellen Baumeister</a></h2>
-									<p>Wir sind ihr persönlicher Berater und Umsetzer bei verschiedensten Bauaufträgen. Von Abbruch zu Trockenbau helfen wir ihnen bei allem. Kontaktieren Sie uns noch heute für eine Beratung. Falls sie Hilfe bei der Renovation oder beim Neubau brauchen, bieten wir Ihnen unsere Partner Architekturen Bürös an, helfen vor Ort mit der Renovation oder auch als Baumeister. Wir bieten Ihnen alles an vom Bauplan zum fertigem Haus.</p>
-								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
-								</ul>
-							</article>
-
-						<!-- Posts -->
-							<section class="posts">
-								<article>
-									<header>
-										<h2><a href="./abbruch.html">Abbruch</a></h2>
-									</header>
-									<a href="./abbruch.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Falls sie Beihilfe bei der Renovation brauchen, bieten wir Ihnen ein Team und Fahrzeuge zur Umsetzung an, der Komplette Abbau wird von unserem Team Ihren Wünschen nach umgesetzt.</p>
-									<ul class="actions special">
-										<li><a href="./abbruch.html" class="button">Produkt und Referenzen</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="./aushub.html">Aushub</h2>
-									</header>
-									<a href="./aushub.html" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Hier helfen wir Ihnen bei der kompletten massgeschneiderten Lösung für Sie. Wir bieten Bagger Arbeiten an und helfen bei Fundament, Neugrabung des Gartens oder setzen einer neuen Steintreppe.</p>
-									<ul class="actions special">
-										<li><a href="./aushub.html" class="button">Aushub</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="kanalisation.html">Kanalisation</a></h2>
-									</header>
-									<a href="kanalisation.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Auch bei Sanitärs-Lösungen haben unsere Experten alles bereit um Ihnen zu helfen, vom Legen der Rohre bis zur Kanalisation, alles wird von unseren Experten übernommen.</p>
-									<ul class="actions special">
-										<li><a href="kanalisation.html" class="button">Kanalisation</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="./baumeister.html">Baumeister</a></h2>
-									</header>
-									<a href="./baumeister.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Zusammen mit unserem Partner können sie einen Bauplan erstellen und wir übernehmen die komplette Umsetzung, sehen sie unter unseren Referenzen, wie der Komplett umbau übernommen und ausgeführt wird.</p>
-									<ul class="actions special">
-										<li><a href="./baumeister.html" class="button">Baumeister</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="./trockenbau.html">Trockenbau</a></h2>
-									</header>
-									<a href="./trockenbau.html" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Auch im Innenbereich sind unsere Experten stets auf vollste Kundenzufriedenheit aus, wir bauen um renovieren oder bauen neu, egal ob Büro, Haushalt oder Lager wir sind stets die Kundenwünsche am umsetzen.</p>
-									<ul class="actions special">
-										<li><a href="./trockenbau.html" class="button">Trockenbau und Montage</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="./fliessen_plattenlegen.html">Fliessen und Plattenlegen</a></h2>
-									</header>
-									<a href="./fliessen_plattenlegen.html" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Falls ihre Wohnung oder ihr Büro ein neuen Holzboden oder Steinboden braucht sind wir dazu da Ihnen einen neuen Boden oder Fliessen zu legen, wir helfen und setzen um.</p>
-									<ul class="actions special">
-										<li><a href="./fliessen_plattenlegen.html" class="button">Fliessen und Plattenlegen</a></li>
-									</ul>
-								</article>
-							</section>
-
-					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
-						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-whatsapp"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
-						</section>
-					</footer>
-
-				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy;  ROI&amp;Bau GmbH</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
+					</article>
+					<article>
+						<header>
+							<h2><a href="kanalisation.html">Kanalisation</a></h2>
+						</header>
+						<a href="kanalisation.html" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+						<p>Auch bei Sanitärs-Lösungen haben unsere Experten alles bereit um Ihnen zu helfen, vom Legen der Rohre bis zur Kanalisation, alles wird von unseren Experten übernommen.</p>
+						<ul class="actions special">
+							<li><a href="kanalisation.html" class="button">Kanalisation</a></li>
+						</ul>
+					</article>
+					<article>
+						<header>
+							<h2><a href="./baumeister.html">Baumeister</a></h2>
+						</header>
+						<a href="./baumeister.html" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+						<p>Zusammen mit unserem Partner können sie einen Bauplan erstellen und wir übernehmen die komplette Umsetzung, sehen sie unter unseren Referenzen, wie der Komplett umbau übernommen und ausgeführt wird.</p>
+						<ul class="actions special">
+							<li><a href="./baumeister.html" class="button">Baumeister</a></li>
+						</ul>
+					</article>
+					<article>
+						<header>
+							<h2><a href="./trockenbau.html">Trockenbau</a></h2>
+						</header>
+						<a href="./trockenbau.html" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+						<p>Auch im Innenbereich sind unsere Experten stets auf vollste Kundenzufriedenheit aus, wir bauen um renovieren oder bauen neu, egal ob Büro, Haushalt oder Lager wir sind stets die Kundenwünsche am umsetzen.</p>
+						<ul class="actions special">
+							<li><a href="./trockenbau.html" class="button">Trockenbau und Montage</a></li>
+						</ul>
+					</article>
+					<article>
+						<header>
+							<h2><a href="./fliessen_plattenlegen.html">Fliessen und Plattenlegen</a></h2>
+						</header>
+						<a href="./fliessen_plattenlegen.html" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+						<p>Falls ihre Wohnung oder ihr Büro ein neuen Holzboden oder Steinboden braucht sind wir dazu da Ihnen einen neuen Boden oder Fliessen zu legen, wir helfen und setzen um.</p>
+						<ul class="actions special">
+							<li><a href="./fliessen_plattenlegen.html" class="button">Fliessen und Plattenlegen</a></li>
+						</ul>
+					</article>
+				</section>
 
 			</div>
+
+			<!-- Footer -->
+			<footer id="footer">
+				<section>
+					<form method="post" action="#">
+						<div class="fields">
+							<div class="field">
+								<label for="name">Name</label>
+								<input type="text" name="name" id="name" />
+							</div>
+							<div class="field">
+								<label for="email">Email</label>
+								<input type="text" name="email" id="email" />
+							</div>
+							<div class="field">
+								<label for="message">Message</label>
+								<textarea name="message" id="message" rows="3"></textarea>
+							</div>
+						</div>
+						<ul class="actions">
+							<li><input type="submit" value="Send Message" /></li>
+						</ul>
+					</form>
+				</section>
+				<section class="split contact">
+					<section class="alt">
+						<h3>Address</h3>
+						<p>
+							1234 Somewhere Road #87257<br />
+							Nashville, TN 00000-0000
+						</p>
+					</section>
+					<section>
+						<h3>Phone</h3>
+						<p><a href="#">(000) 000-0000</a></p>
+					</section>
+					<section>
+						<h3>Email</h3>
+						<p><a href="#">info@untitled.tld</a></p>
+					</section>
+					<section>
+						<h3>Social</h3>
+						<ul class="icons alt">
+							<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon brands alt fa-whatsapp"><span class="label">GitHub</span></a></li>
+						</ul>
+					</section>
+				</section>
+			</footer>
+
+			<!-- Copyright -->
+			<div id="copyright">
+				<ul><li>&copy;  ROI&amp;Bau GmbH</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+			</div>
+
+		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
